@@ -364,7 +364,7 @@ import|;
 end_import
 
 begin_comment
-comment|/*  * Instructions:  * 1. Run Thrift to generate the java module HBase  *    thrift --gen java ../../../src/java/org/apache/hadoop/hbase/thrift/Hbase.thrift  * 2. Acquire a jar of compiled Thrift java classes.  As of this writing, HBase ships   *    with this jar (libthrift-[VERSION].jar).  If this jar is not present, or it is   *    out-of-date with your current version of thrift, you can compile the jar   *    yourself by executing {ant} in {$THRIFT_HOME}/lib/java.  * 3. Compile and execute this file with both the libthrift jar and the gen-java/   *    directory in the classpath.  This can be done on the command-line with the   *    following lines: (from the directory containing this file and gen-java/)  *      *    javac -cp /path/to/libthrift/jar.jar:gen-java/ DemoClient.java  *    mv DemoClient.class gen-java/org/apache/hadoop/hbase/thrift/  *    java -cp /path/to/libthrift/jar.jar:gen-java/ org.apache.hadoop.hbase.thrift.DemoClient  *   */
+comment|/*  * Instructions:  * 1. Run Thrift to generate the java module HBase  *    thrift --gen java ../../../src/main/resources/org/apache/hadoop/hbase/thrift/Hbase.thrift  * 2. Acquire a jar of compiled Thrift java classes.  As of this writing, HBase ships   *    with this jar (libthrift-[VERSION].jar).  If this jar is not present, or it is   *    out-of-date with your current version of thrift, you can compile the jar   *    yourself by executing {ant} in {$THRIFT_HOME}/lib/java.  * 3. Compile and execute this file with both the libthrift jar and the gen-java/   *    directory in the classpath.  This can be done on the command-line with the   *    following lines: (from the directory containing this file and gen-java/)  *      *    javac -cp /path/to/libthrift/jar.jar:gen-java/ DemoClient.java  *    mv DemoClient.class gen-java/org/apache/hadoop/hbase/thrift/  *    java -cp /path/to/libthrift/jar.jar:gen-java/ org.apache.hadoop.hbase.thrift.DemoClient  *   */
 end_comment
 
 begin_class
