@@ -19,7 +19,7 @@
 ''' 
 # Instructions:
 # 1. Run Thrift to generate the python module HBase
-#    thrift --gen py ../../../src/java/org/apache/hadoop/hbase/thrift/Hbase.thrift 
+#    thrift --gen py ../../../src/main/resources/org/apache/hadoop/hbase/thrift/Hbase.thrift
 # 2. Create a directory of your choosing that contains:
 #     a. This file (DemoClient.py).
 #     b. The directory gen-py/hbase (generated by instruction step 1).
